--- a/AIWriter.ipynb
+++ b/AIWriter.ipynb
@@ -112,7 +112,7 @@
     "\n",
     "useProxy = True\n",
     "adminUser = 'admin'\n",
-    "adminPass = 'aZn2iDbkS3iY'\n",
+    "adminPass = '<password>'\n",
     "banned = {\"bad\",\"disappoint\",\"cheap\", \"poor quality\", \"don’t buy\", \"2-star\", \"2 star\", \"update\", \"low quality\", \"bad quality\", \"do not buy\", \"3-star\", \"3 star\", \"4-star\", \"4 star\"}\n",
     "# training params\n",
     "tune_epochs = 2500\n",
