--- a/AIWriter.ipynb
+++ b/AIWriter.ipynb
@@ -134,8 +134,8 @@
     "\n",
     "file_name = \"train.txt\"\n",
     "\n",
-    "proxies = {\"http\": \"socks5h://OsqPYlamrJ:4JyIWhccghnX@clt.socks.ipvanish.com:1080\",\n",
-    "          \"https\": \"socks5h://OsqPYlamrJ:4JyIWhccghnX@clt.socks.ipvanish.com:1080\"}\n",
+    "proxies = {\"http\": \"socks5h://<user:pass>@clt.socks.ipvanish.com:1080\",\n",
+    "          \"https\": \"socks5h://<user:pass>@clt.socks.ipvanish.com:1080\"}\n",
     "\n",
     "!pip install -U requests[socks]\n",
     "import requests\n",
